--- a/less/main.less
+++ b/less/main.less
@@ -68,7 +68,7 @@ body {
   overflow-x: hidden;
 }
 nav, header, footer, section, article {
-	display: block;
+  display: block;
 }
 a {
   color: #b83000;
@@ -104,7 +104,7 @@ blockquote {
 body > footer {
   text-align: left;
   margin-left: 10px;
-	font-style: italic;
+  font-style: italic;
   font-size: 18px;
   color: #888;
 }
@@ -114,7 +114,7 @@ body > footer {
   display: block;
   width: 199px;
   height: 81px;
-  background: url(https://raw.github.com/amatellanes/lesscss.org/gh-pages/images/logo.png) no-repeat;
+  background: url(/images/logo.png) no-repeat;
 }
 nav {
   margin-left: 15px;
@@ -242,10 +242,10 @@ nav a, #dropdown li {
       code {
         font-size: 13px;  
       }
-	  @color: @blue + #333;
+    @color: @blue + #333;
       color: @color; display: inline; float: left; margin: 21px 0 0 15px; line-height: 22px;
-	  .link(@color);
-	}
+    .link(@color);
+  }
   }
   h2 {
     span {
@@ -391,14 +391,14 @@ nav a, #dropdown li {
 
 #reference .content {
   h1 {
-	padding: 0;
-	font-size: 1.6em;
+  padding: 0;
+  font-size: 1.6em;
   }
   h2 {
-	
+  
   }
   h3 {
-	font-weight: bold;
+  font-weight: bold;
   }
   p + h1, pre + h1, code + h1 {
     border-top: 6px solid rgba(0, 0, 0, 0.1);
