--- a/less/main.less
+++ b/less/main.less
@@ -114,7 +114,7 @@ body > footer {
   display: block;
   width: 199px;
   height: 81px;
-  background: url(/images/logo.png) no-repeat;
+  background: url(https://raw.github.com/amatellanes/lesscss.org/gh-pages/images/logo.png) no-repeat;
 }
 nav {
   margin-left: 15px;
